<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="3" >

    <ImageView
        android:id="@+id/shengmu"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/shengmu_description"
        android:src="@drawable/shengmu" />

    <ImageView
        android:id="@+id/pinyin"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/pinyin_description"
        android:src="@drawable/pinyin" />

    <ImageView
        android:id="@+id/shengdiao"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/shengdiao_description"
        android:src="@drawable/shengdiao" />

    <ImageView
        android:id="@+id/biandiao"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/biandiao_description"
        android:src="@drawable/biandiao" />

    <ImageView
        android:id="@+id/yunmu"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/yunmu_description"
        android:src="@drawable/yunmu" />

    <ImageView
        android:id="@+id/geyao"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/geyao_description"
        android:src="@drawable/geyao" />

</GridLayout>