<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/shuangchun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/sc_shengmu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/tab_background_color"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="P"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="ph"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="m"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="b"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/shejianzhong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/sjz_shengmu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/tab_background_color"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="t"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="th"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="n"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="l"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/shegenhou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/sgh_shengmu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/tab_background_color"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="k"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="kh"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="g"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="gh"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="h"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/shejianqian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/sjq_shengmu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/tab_background_color"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="ts"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="tsh"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="S"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="j"
            android:textSize="40sp" />
    </LinearLayout>

</LinearLayout>